--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
+    "@capacitor/push-notifications": "^6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@capacitor/toast": "^6.0.1",
     "@ionic/angular": "^8.0.0",
