--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/app": "6.0.0",
     "@capacitor/camera": "^6.0.1",
     "@capacitor/core": "6.0.0",
+    "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
@@ -49,6 +50,8 @@
     "@angular/language-service": "^18.0.0",
     "@capacitor/cli": "6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@types/google.maps": "^3.55.11",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
